# ROS2-odev3.

./: README.md
src/uydu_telemetri/: README.md  package.xml  setup.cfg  setup.py
src/uydu_telemetri/launch/: satellite_launch.py
src/uydu_telemetri/uydu_telemetri/: publisher_node.py  subscriber_node.py
src/uydu_telemetri_msgs/: CMakeLists.txt  README.md  package.xml
src/uydu_telemetri_msgs/msg/: TelemetriVerisi.msg
